test/core/errors/bitmask_types_error/zs/duplicated_bitmask_value_error.zs
package duplicated_bitmask_value_error;

bitmask uint8 DuplicatedValue
{
    NONE       = 000b,
    DARK_RED   = 001b,
    DARK_BLUE  = 001b,
    DARK_BLACK = 111b
};
